traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:11: error: method getMondeHauteur has return statement; needs result type
  return a
  ^