traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def getMondeHauteur() = {
  var a=0
  droite()
  droite()
  while (!estFaceMur()) {
    avance()
    a=a+1
  }
	droite()
  droite()
  setPos(0, 0)
  return a

}











override def run() {
}